Registro bien, iniciar sesion mal

--- a/Paginas/iniciosesion.html
+++ b/Paginas/iniciosesion.html
@@ -9,7 +9,7 @@
   <form action="/iniciosesion" method="post">
    <table> 
     <tr>
-      <td> Email de usuario </td> 
+      <td> Email de usuario :</td> 
       <td><input name="nickusuario" type="text" value=" %(nickusuario)s "></td>
       <td> %(nick_error)s </td>
     </tr>
