Inicio de Sesion (Internal Server Error)

--- a/Paginas/iniciosesion.html
+++ b/Paginas/iniciosesion.html
@@ -10,8 +10,8 @@
    <table> 
     <tr>
       <td> Email de usuario :</td> 
-      <td><input name="nickusuario" type="text" value=" %(nickusuario)s "></td>
-      <td> %(nick_error)s </td>
+      <td><input name="username" type="text" value=" %(username)s "></td>
+      <td> %(username_error)s </td>
     </tr>
     <tr>
      <td> Password </td>
