El registro se supone que va, pero iniciar sesion no

--- a/Paginas/iniciosesion.html
+++ b/Paginas/iniciosesion.html
@@ -9,9 +9,9 @@
   <form action="/iniciosesion" method="post">
    <table> 
     <tr>
-      <td> Email de usuario :</td> 
-      <td><input name="username" type="text" value=" %(username)s "></td>
-      <td> %(username_error)s </td>
+      <td> Nick de usuario :</td> 
+      <td><input name="username" type="text" value=" %(username)s"></td>
+      <td>%(username_error)s</td>
     </tr>
     <tr>
      <td> Password </td>
