--- a/Paginas/main.html
+++ b/Paginas/main.html
@@ -15,12 +15,11 @@
             {% else %}
               <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
             {% endif %}
-<!--
             {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
               <li><a href="/pregunta/busqueda">Buscar</a></li>
               <a class='dropdown-button' href='#' data-activates='dropdown1'>Cuestionario</a>
                 <ul id='dropdown1' class='dropdown-content'>
-                 <li><a href="/pregunta/lista">Todas las preguntas</a></li>
+                 <li><a href="/pregunta/visualizarpreguntas">Todas las preguntas</a></li>
                 </ul>
             {% endif %}
             {% if rol == 'Usuario' or rol == 'Admin'%}
@@ -44,17 +43,17 @@
             {% endif %}
 
             {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
-              <li><a href="/pregunta/busqueda">Buscar</a></li>
-              <li><a href="/pregunta/lista">Todas las preguntas</a></li>
+              <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
+              <li><a href="/pregunta/lista">Ver todas las preguntas</a></li>
             {% endif %}
             {% if rol == 'Usuario' or rol == 'Admin'%}
-                 <li><a href="/pregunta/stored">Guardadas</a></li>
-                 <li><a href="/pregunta/propias">Mis creaciones</a></li>
                  <li><a href="/pregunta/crear">Añadir pregunta</a></li>
+                 <li><a href="/pregunta/stored">Guardadas</a></li>
+                 <li><a href="/pregunta/propias">Mis preguntas</a></li>
             {% endif %}
             {% if rol == 'Admin' %}
              <li><a href="/admin">Administración</a></li>
-            {% endif %}-->
+            {% endif %}
           </ul>
         </div>
       </nav>
