Pequeños cambios, insertarpreguntas sigue sin funcionar

--- a/Paginas/cerrarsesion.html
+++ b/Paginas/cerrarsesion.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div>
-     <p>Borrada la sesion ...</p>
-     <p><h2><a href='/'> Ir a inicio ... </a></h2>       
+     El usuario <label style=" font-size: 16px;  font-weight: bold;">{{message}}</label> ha cerrado sesión
+     <p><h2><a href='/'>Volver a inicio</a></h2>       
 </div>
 
 {% endblock %}
