--- a/Paginas/main.html
+++ b/Paginas/main.html
@@ -8,48 +8,30 @@
     <div>
       <nav>
         <div>
-          <ul>
+         <ul>
             {% if login == 'no' %}
               <li><a href="/iniciosesion">Iniciar Sesión</a></li>
               <li><a href="/registro">Registro</a></li>
             {% else %}
               <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
+              <li><a href="/pregunta">Preguntas</a></li>
             {% endif %}
+            <div id="preguntas">{% block preguntas %} {% endblock %}</div>
+                    
+
+          </ul>
+          <ul>
             {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
-              <li><a href="/pregunta/busqueda">Buscar</a></li>
-              <a class='dropdown-button' href='#' data-activates='dropdown1'>Cuestionario</a>
-                <ul id='dropdown1' class='dropdown-content'>
-                 <li><a href="/pregunta/visualizarpreguntas">Todas las preguntas</a></li>
-                </ul>
+              <li><a href="/pregunta/busqueda">Buscar Pregunta</a></li>
+              <li><a href="/pregunta/visualizarpreguntas">Todas las preguntas</a></li>
             {% endif %}
             {% if rol == 'Usuario' or rol == 'Admin'%}
               <a class='dropdown-button' href='#' data-activates='dropdown3'>Mis preguntas</a>
                 <ul id='dropdown3' class='dropdown-content'>
                  <li><a href="/pregunta/stored">Guardadas</a></li>
                  <li><a href="/pregunta/propias">Mis creaciones</a></li>
-                 <li><a href="/pregunta/crear">Añadir pregunta</a></li>
+                 <li><a href="/pregunta/insertarpregunta">Añadir pregunta</a></li>
                 </ul>
-            {% endif %}
-            {% if rol == 'Admin' %}
-             <li><a href="/admin">Administración</a></li>
-            {% endif %}
-          </ul>
-          <ul>
-            {% if login == 'no' %}
-              <li><a href="/iniciosesion">Iniciar Sesión</a></li>
-              <li><a href="/registro">Registro</a></li>
-            {% else %}
-              <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
-            {% endif %}
-
-            {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
-              <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
-              <li><a href="/pregunta/lista">Ver todas las preguntas</a></li>
-            {% endif %}
-            {% if rol == 'Usuario' or rol == 'Admin'%}
-                 <li><a href="/pregunta/crear">Añadir pregunta</a></li>
-                 <li><a href="/pregunta/stored">Guardadas</a></li>
-                 <li><a href="/pregunta/propias">Mis preguntas</a></li>
             {% endif %}
             {% if rol == 'Admin' %}
              <li><a href="/admin">Administración</a></li>
