Materialize, insertarpreguntas no funciona

--- a/Paginas/footer.html
+++ b/Paginas/footer.html
@@ -1,14 +1,21 @@
-  <footer>
-    <div>
-          <h5>Desarrollado por:</h5>
-          <p>Asier Egibar<br/>Olatz Romeo</p>
-    </div>
-    <!--<div>
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-      <img alt="Licencia de Creative Commons" style="border-width:0" class="right" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
-      </a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
-    </div>-->
-  </footer>
- 
-</body>
+  <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Desarrollado por:</h5>
+                <p class="grey-text text-lighten-4">Asier Egibar<br/>Olatz Romeo</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                <img alt="Licencia de Creative Commons" style="border-width:0" class="right" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+                </a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2017 Copyright Text
+            </div>
+          </div>
+        </footer>
 </html>
