--- a/Paginas/preguntas.html
+++ b/Paginas/preguntas.html
@@ -7,12 +7,14 @@
               <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li>
             {% endif %}
             {% if rol == 'Usuario' or rol == 'Admin'%}
-                 <li><a href="/pregunta/insertarpregunta">Añadir pregunta</a></li>
+                 <li><a href="/pregunta/insertarpreguntas">Añadir pregunta</a></li>
                  <li><a href="/pregunta/stored">Guardadas</a></li>
                  <li><a href="/pregunta/propias">Mis preguntas</a></li>
             {% endif %}
             {% if rol == 'Admin' %}
              <li><a href="/admin">Administración</a></li>
             {% endif %}
+
+</body>
 
 {% endblock %}
