--- a/Paginas/insertarpreguntas.html
+++ b/Paginas/insertarpreguntas.html
@@ -12,9 +12,9 @@
       function getSelected(){
         /* Para obtener el valor */
         var cod = document.getElementById("opciones").selectedIndex.value;
-        var opc1=document.getElementById("opc1").text
-        var opc2=document.getElementById("opc2").text
-        var opc3=document.getElementById("opc3").text
+        var opc1=document.getElementById("opcion1").text
+        var opc2=document.getElementById("opcion2").text
+        var opc3=document.getElementById("opcion3").text
 
         if (cod==1){
           document.getElementById("respcorrecta").innerHTML=opc1;
@@ -25,9 +25,7 @@
         }
       }
 </script>
-<form id='insertarpreguntas' method="post">
-
-   
+<form action="/insertarpreguntas" id='insertarpreguntas' method="post">
     <table> 
         <tr>
             <td><label>Tema:</label></td>&nbsp;
