--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -2,62 +2,52 @@
 
   {%block content %}
 
-    <div class="container">
-    <div class="section">
-      <!--   Icon Section   -->
-      <div class="row">
-<style type="text/css"> .label {text-align: right} .error {color: red} </style>
+  <div class="container">
+    <div class="row">
+      <div class="col s6 offset-s3 z-depth-1" id="panell">
+         <style type="text/css"> .label {text-align: right} .error {color: red} </style>
           <div>
-                <form method="POST">
-                  <div > <h2> Registro </h2></div>
-                  <div >
-                    <div>
+              <form method="POST">
+                  <h4> Registro </h4>
+                  <div>
                     	<label for="Nombre" data-error="%(name_error)s">Nombre</label><br>
                     	<input name="name" id="Nombre" type="text"  length="30" value="%(name)s"> 
                     	<div> %(name_error)s </div>
-                    </div>
-                    <div>
+                  </div>
+                  <div>
                     	<label for="Apellido" data-error="%(surname_error)s">Apellidos</label><br>
                      	<input name="surname" id="Apellido" type="text" length="30" value="%(surname)s">
                       	<div> %(surname_error)s </div>
-                    </div>
                   </div>
                   <div>
-                    <div>
                      	<label for="Nick">Nick</label><br>
                      	<input name="username" id="nick" type="text" length="20" value="%(username)s">
                       	<div > %(username_error)s </div>
-                    </div>
                   </div>
-                  <div >
-                    <div >
+                  <div>
                     	<label for="email">Email</label><br>
                     	<input name="email" id="email" type="email" length="50" value="%(email)s">
                     	<div> %(email_error)s </div>
-                    </div>
                   </div>
-                  <div >
-                    <div >
+                  <div>
                     	<label for="password">Contraseña</label><br>
                     	<input name="password" id="password" type="password" value="%(password)s">
                     	<div> %(password_error)s </div>
                     </div>
-                  </div>
-                  <div >
-                    <div >
-                    	<label for="password2">Contraseña</label><br>
+                  <div>
+                    	<label for="password2">Repita la contraseña</label><br>
                     	<input name="verify" id="verify" type="password" value="%(verify)s">
                     	<div > %(verify_error)s </div>
-                    </div>
                   </div>
                 	<div>
                 		<br>
-                  		<button type="submit" name="action">Registrar</button><br>
-                  	</div>
+                      <input class="waves-effect waves-light btn" type="submit" name="action" value="Registrar" style="float: right;">
+                  </div>
+                  <br>
+                  <br>
+                  <br>
                 </form>
-          </div>
       </div>
-
     </div>
   </div>
 
