--- a/Paginas/main.html
+++ b/Paginas/main.html
@@ -6,16 +6,16 @@
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="stylesheets/css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="/stylesheets/css/materialize.min.css"  media="screen,projection"/>
 
 </head>
 <body class="white">
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="stylesheets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="/stylesheets/js/materialize.min.js"></script>
   
   <nav>
-    <div class="nav-wrapper" >
+    <div class="nav-wrapper teal" >
       <a href="#" class="brand-logo"><img src="/images/resized.png"></img> </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         {% if login == 'no' %}
@@ -31,7 +31,6 @@
   </nav>
 <div>
 <h3>Bienvenido a QUIZ!</h3>
-<br>
 <br>
    {% block content %}
 
