--- a/Paginas/iniciosesion.html
+++ b/Paginas/iniciosesion.html
@@ -8,8 +8,8 @@
             <h4 id="title">Iniciar Sesión</h4>
               <form action="/iniciosesion" method="post">
                 <div class="input-field" id="username">
-                  <input  type="text" class="validate" name="username" value="%(username)s">
-                  <label for="username">Nick de usuario :</label>
+                 <input  type="text" class="validate" name="username" value="%(username)s">
+                  <label for="username">Nick de usuario</label>
                   <div class="error"> %(username_error)s </div>
                 </div>
                 <div class="input-field" id="password">
