--- a/Paginas/visualizarpreguntas.html
+++ b/Paginas/visualizarpreguntas.html
@@ -2,7 +2,21 @@
 
   {% block content %}
 
+<!-- Navbar goes here -->
 
+    <!-- Page Layout here -->
+    <div class="row">
+
+      <div class="col s3">
+       <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
+        <!-- Grey navigation panel -->
+      </div>
+
+      <div class="col s9">
+        <!-- Teal page content  -->
+      </div>
+
+    </div>
 <form action="">
 {% for p in preguntas %}
 <div>
