--- a/Paginas/footer.html
+++ b/Paginas/footer.html
@@ -5,10 +5,10 @@
                 <h5 class="white-text">Desarrollado por:</h5>
                 <p class="grey-text text-lighten-4">Asier Egibar<br/>Olatz Romeo</p>
               </div>
-              <div class="col l4 offset-l2 s12">
+              <div class="col l4 offset-l2 s12 yellow-text">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
                 <img alt="Licencia de Creative Commons" style="border-width:0" class="right" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
-                </a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
+                </a><br/>Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><font color="white">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</font></a>.
               </div>
             </div>
           </div>
