--- a/Paginas/iniciosesion.html
+++ b/Paginas/iniciosesion.html
@@ -10,12 +10,12 @@
                 <div class="input-field" id="username">
                  <input  type="text" class="validate" name="username" value="%(username)s">
                   <label for="username">Nick de usuario</label>
-                  <div class="error"> %(username_error)s </div>
+                  <div style="color:#FF0000;"> %(username_error)s </div>
                 </div>
                 <div class="input-field" id="password">
                   <input  type="password" class="validate" name="passusuario" value="%(passusuario)s">
                   <label for="password">Password</label>
-                  <div class="error">%(password_error)s</div>
+                  <div style="color:#FF0000;">%(password_error)s</div>
                 </div>
                 <p>
                   <input class="waves-effect waves-light btn" type="submit" value="Iniciar Sesion" style="float: right;">
