--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -12,32 +12,32 @@
                   <div>
                     	<label for="Nombre" data-error="%(name_error)s">Nombre</label><br>
                     	<input name="name" id="Nombre" type="text"  length="30" value="%(name)s"> 
-                    	<div> %(name_error)s </div>
+                    	<div style="color:#FF0000;" > %(name_error)s </div>
                   </div>
                   <div>
                     	<label for="Apellido" data-error="%(surname_error)s">Apellidos</label><br>
                      	<input name="surname" id="Apellido" type="text" length="30" value="%(surname)s">
-                      	<div> %(surname_error)s </div>
+                      	<div style="color:#FF0000;"> %(surname_error)s </div>
                   </div>
                   <div>
                      	<label for="Nick">Nick</label><br>
                      	<input name="username" id="nick" type="text" length="20" value="%(username)s">
-                      	<div > %(username_error)s </div>
+                      	<div style="color:#FF0000;" > %(username_error)s </div>
                   </div>
                   <div>
                     	<label for="email">Email</label><br>
                     	<input name="email" id="email" type="email" length="50" value="%(email)s">
-                    	<div> %(email_error)s </div>
+                    	<div style="color:#FF0000;"> %(email_error)s </div>
                   </div>
                   <div>
                     	<label for="password">Contraseña</label><br>
                     	<input name="password" id="password" type="password" value="%(password)s">
-                    	<div> %(password_error)s </div>
+                    	<div style="color:#FF0000;"> %(password_error)s </div>
                     </div>
                   <div>
                     	<label for="password2">Repita la contraseña</label><br>
                     	<input name="verify" id="verify" type="password" value="%(verify)s">
-                    	<div > %(verify_error)s </div>
+                    	<div style="color:#FF0000;" > %(verify_error)s </div>
                   </div>
                 	<div>
                 		<br>
