--- a/Paginas/insertarpreguntas.html
+++ b/Paginas/insertarpreguntas.html
@@ -55,15 +55,15 @@
                 <input type="text" name="opcion3" id="opcion3" required="" value="%(opcion3)s"/>
                 <label for="opcion3">Opcion 3:</label>
             </div>
-                         <div class="input-field col s12">
-    <select id="respcorrecta" name="respcorrecta">
-      <option value="0" >Elige una respuesta</option>
-      <option value="1">a)</option>
-      <option value="2">b)</option>
-      <option value="3">c)</option>
-    </select>
-    <label>Respuesta</label>
-  </div>
+            <div class="input-field col s12">
+                  <select id="respcorrecta" name="respcorrecta">
+                    <option value="0" >Elige una respuesta</option>
+                    <option value="1">a)</option>
+                    <option value="2">b)</option>
+                    <option value="3">c)</option>
+                  </select>
+            <label>Respuesta Correcta</label>
+            </div>
             <br>
             <br>
             <br>
@@ -77,13 +77,14 @@
 
     </div>
 
+<!--
 <div class="container">
     <div class="row">
       <div class="col s6 offset-s3 z-depth-1" id="panell">
      
 </div>
 </div>
-</div>
+</div>-->
 <div class="error">%(errores)s</div>
 <script type="text/javascript">
     
