--- a/Paginas/preguntas.html
+++ b/Paginas/preguntas.html
@@ -4,6 +4,7 @@
 
             {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
               <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
+              <li><a href="/pregunta/Quiz">Jugar</a></li>
               <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li>
             {% endif %}
             {% if rol == 'Usuario' or rol == 'Admin'%}
