--- a/Paginas/main.html
+++ b/Paginas/main.html
@@ -30,17 +30,19 @@
       <div class="nav-wrapper teal" >
         <a href="/" class="brand-logo"><img class="responsive-img" src="/images/resized.png"></img></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          {% if login == 'no' %}
+          {% if login == 'no' and rol==''%}
           <li><a href="/iniciosesion">Iniciar Sesión</a></li>
           <li><a href="/registro">Registro</a></li>
           {% elif rol == 'Anonimo' %}
           <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
           <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
+          <li><a href="/pregunta/Quiz">Jugar</a></li>
           <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li>  
           {% else %}
           <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
           <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
           <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li> 
+          <li><a href="/pregunta/Quiz">Jugar</a></li>
           <li><a href="/pregunta/insertarpreguntas">Añadir pregunta</a></li>
           {% endif %}
         </ul>
@@ -55,30 +57,5 @@
      {% endblock %}
     </div>
   </main>
- <!--
-      <nav>
-        <div>
-         
-          <ul>
-            {% if rol == 'Anonimo' or rol == 'Usuario' or rol == 'Admin'%}
-              <li><a href="/pregunta/busqueda">Buscar Pregunta</a></li>
-              <li><a href="/pregunta/visualizarpreguntas">Todas las preguntas</a></li>
-            {% endif %}
-            {% if rol == 'Usuario' or rol == 'Admin'%}
-              <a class='dropdown-button' href='#' data-activates='dropdown3'>Mis preguntas</a>
-                <ul id='dropdown3' class='dropdown-content'>
-                 <li><a href="/pregunta/stored">Guardadas</a></li>
-                 <li><a href="/pregunta/propias">Mis creaciones</a></li>
-                 <li><a href="/pregunta/insertarpregunta">Añadir pregunta</a></li>
-                </ul>
-            {% endif %}
-            {% if rol == 'Admin' %}
-             <li><a href="/admin">Administración</a></li>
-            {% endif %}
-          </ul>
-        </div>
-      </nav>
-    </div>
-    -->
        
 {% extends "footer.html" %}
