--- a/Paginas/Quiz.html
+++ b/Paginas/Quiz.html
@@ -27,50 +27,36 @@
 			});
 		}
 	</script>
+	<div class="container">
+		<form id='quiz' name='quiz' method="post">
+			<div class="inputs">
+			{% set count = 1 %}
+			{% for p in preguntas %}
+			<p class="enunciado"> {{count}}. {{p.enunciado}} &nbsp; <span id="comprobarPreg_{{p.id_pregunta}}"> </span> </p> 
+				<table>
+					<tr>
+					<td style="text-align: left;">
+						<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}1">
+						<label for="{{p.id_pregunta}}1">{{p.respuesta}}</label></br>
+						<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}2">
+						<label for="{{p.id_pregunta}}2">{{p.respuesta2}}</label></br>
+						<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}3">
+						<label for="{{p.id_pregunta}}3">{{p.respuesta3}}</label>
+					</td>
+					</tr>
+				</table>					
+				<br/>
+				<div style="text-align: center;">
+				<button class="button" type="button" onClick="comprobarPreg('{{p.id_pregunta}}')"> Comprobar pregunta</button>
+				</div>
 
-		<div class="container">
+				<div class="sep-quiz"></div>
+				{% set count = count + 1 %}
 
-			<form id='quiz' name='quiz' method="post">
-
-				<div class="inputs">
-
-					{% set count = 1 %}
-					{% for p in preguntas %}
-
-						<p class="enunciado"> {{count}}. {{p.enunciado}} &nbsp; <span id="comprobarPreg_{{p.id_pregunta}}"> </span> </p> 
-						<table>
-							<tr>
-								<td style="text-align: left;">
-									<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}1">
-									<label for="{{p.id_pregunta}}1">{{p.respuesta}}</label>
-									</br>
-									<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}2">
-									<label for="{{p.id_pregunta}}2">{{p.respuesta2}}</label>
-									</br>
-									<input type="radio" name="{{p.id_pregunta}}" id="{{p.id_pregunta}}3">
-									<label for="{{p.id_pregunta}}3">{{p.respuesta3}}</label>
-
-								</td>
-							</tr>
-						</table>					
-
-						<br/>
-						<div style="text-align: center;">
-						<button class="button" type="button" onClick="comprobarPreg('{{p.id_pregunta}}')"> Comprobar pregunta</button>
-						</div>
-
-						<br/>
-						<br/>
-
-						<div class="sep-quiz"></div>
-						{% set count = count + 1 %}
-
-					{% endfor %}
-
+				{% endfor %}
 				</div>
 			</form>
 		</div>
-
 	</div>
 </body>
 
