--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -14,6 +14,8 @@
 				<div class="header">
 					<h3> JUGAR </h3>
 				</div>
+				{{login}}
+				{{rol}}
 
 				<div class="sep"> </div>
 				<div class="inputs">
