--- a/Paginas/Quiz.html
+++ b/Paginas/Quiz.html
@@ -27,6 +27,9 @@
 			});
 		}
 	</script>
+	<script type="text/javascript">
+        
+</script>
 	<div class="container">
 		<form id='quiz' name='quiz' method="post">
 			<div class="inputs">
@@ -54,6 +57,7 @@
 				{% set count = count + 1 %}
 
 				{% endfor %}
+					<input type="submit" id="submit" value="ENVIAR RESPUESTAS" name="submit"> 
 				</div>
 			</form>
 		</div>
