--- a/Paginas/main.html
+++ b/Paginas/main.html
@@ -33,14 +33,14 @@
           <li><a href="/iniciosesion">Iniciar Sesión</a></li>
           <li><a href="/registro">Registro</a></li>
           <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
-          <li><a href="/pregunta/quiz">Jugar</a></li>
+          <li><a href="/pregunta/Quiz">Jugar</a></li>
           <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li>           
           {% endif %}
 
           {% if rol =='Usuario' and login=='si' %}
           <li><a href="/pregunta/busqueda">Buscar pregunta</a></li>
           <li><a href="/pregunta/visualizarpreguntas">Ver todas las preguntas</a></li> 
-          <li><a href="/pregunta/quiz">Jugar</a></li>
+          <li><a href="/pregunta/Quiz">Jugar</a></li>
           <li><a href="/pregunta/insertarpreguntas">Añadir pregunta</a></li>
           <li><a href="/cerrarsesion">Cerrar Sesión</a></li>
           {% endif %}
