--- a/Paginas/cerrarsesion.html
+++ b/Paginas/cerrarsesion.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div>
      El usuario <label style=" font-size: 16px;  font-weight: bold;">{{message}}</label> ha cerrado sesión
-     <p><h2><a href='/'>Volver a inicio</a></h2>       
+     <h2><a href='/'>Volver a inicio</a></h2>       
 </div>
 
 {% endblock %}
