--- a/Paginas/errores.html
+++ b/Paginas/errores.html
@@ -3,5 +3,6 @@
 {% block content %}
 <div>
     <h5 align="center">{{message}}</h5>
+    <h2><a href='/'>Volver a inicio</a></h2> 
 </div>
 {% endblock %}
