--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -46,6 +46,7 @@
                   <br>
                   <br>
                   <br>
+                  <h4><a href='/'>Volver a inicio</a></h4> 
                 </form>
       </div>
     </div>
